# siralim-building

./: .gitignore  .gitmodules  Cargo.toml  Dioxus.toml  README.md  Trunk.toml  index.html  maskfile.md  mock.html  package-lock.json  package.json  tailwind-build.bat  tailwind.config.js
.github/workflows/: deploy.yml
data/: Cargo.toml
data/avro/: effects.avro  spell_properties.avro  spells.avro  traits.avro
data/src/: effect.rs  keyword.rs  lib.rs  personality.rs  realm.rs  spell.rs  spell_property.rs  stat.rs  stats.rs  trait.rs
embed/avro/: effects.avro  spell_properties.avro  spells.avro  traits.avro
embed/spells/: .managed.json  meta.json
embed/traits/: .managed.json  meta.json
public/style/: _body.sass  _creature-name-tooltip.sass  _desc.sass  _member-group.sass  _modal.sass  _modal_overlay.sass  _name-plate.sass  _party-item-container.sass  _party-pool.sass  _party-spell.sass  _party-trait.sass  _party.sass  _select-table.sass  _spells-modal.sass  _tooltip.sass  _traits-modal.sass  main.sass  variables.sass
src/: atom.rs  component.rs  components.rs  creatures.rs  data.rs  embed_data.rs  embed_directory.rs  hooks.rs  main.rs  member.rs  party.rs  save.rs  state.rs  url_save.rs
src/component/: app.rs  autocomplete.rs  card_tooltip.rs  class_icon.rs  creature_card.rs  description.rs  drag.rs  footer.rs  modal.rs  navbar.rs  outline_icon.rs  party_member.rs  party_trait.rs  personality_dialog.rs  traits_table.rs
src/components/: app.rs  creature_name.rs  creatures.rs  description.rs  icon.rs  modal.rs  party.rs  spell_name.rs  spells.rs  tooltip.rs  traits.rs
src/hooks/: drag.rs  modal.rs  persistent.rs
