[workspace]
members = [ "gen" ]

[package]
name = "web"
version = "0.1.0"
edition = "2021"

[dependencies]
data = { path = "./data" }

dioxus = "0.4.0"
dioxus-web = "0.4.0"
#fermi = "0.4.0"

dioxus-heroicons = { git = "https://github.com/atty303/dioxus-heroicons.git", rev = "835d5f42c6d5026deffcc515474738a47143ed46" }
classes = "1.0.0"

wasm-bindgen = "0.2.87"
web-sys = { version = "0.3.64", features = [ "Window", "History", "Location", "HtmlDialogElement" ] }
gloo-events = "0.1.2"
gloo-utils = "0.1.7"
gloo-storage = "0.2.2"
gloo-dialogs = "0.1.1"
gloo-history = "0.1.5"

log = "0.4.19"
wasm-logger = "0.2.0"

rust-embed = { version = "6.8.1", features = [ "debug-embed", "compression" ] }

once_cell = "1.18.0"

serde = "1.0"
#serde_json = "1.0.93"
apache-avro = { version = "0.15.0", features = [ "derive" ] }
base64 = "0.21"
qstring = "0.7.2"

anyhow = "1"

#getrandom = { version = "0.2.8", features = [ "js" ] }

bitstream-io = "1.7.0"