[package]
name = "data"
version = "0.1.0"

[dependencies]
serde = { version = "1.0.152", features = [ "derive" ] }
apache-avro = { version = "0.14.0", features = [ "derive" ] }
#tantivy = { version = "0.19.2", default-features = false, features = [ "lz4-compression" ] }
implicit-clone = "0.3.5"
anyhow = "1.0.69"